# python-soxr

./: .gitignore  .gitmodules  .readthedocs.yaml  BUILDING.md  CMakeLists.txt  LICENSE.txt  MANIFEST.in  README.md  csoxr.pxd  cysoxr.pyx  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build-dist.yml  build-test.yml  pack.yml  run-test.yml
cmake/: versioning.cmake
docs/: conf.py  index.md  index.rst  modules.rst  soxr.md  soxr.rst
soxr/: __init__.py  csoxr.pxd  cysoxr.pyx
src/: csoxr_ver_vcs.cpp.in  csoxr_version.cpp  csoxr_version.h  soxr_ext.cpp
src/soxr/: __init__.py  _csoxr_version.c  csoxr.pxd  csoxr_version.c  csoxr_version.h  cysoxr.pyx  soxr-config.h
tests/: bench.py  bench_soxr_oneshot.py  conftest.py  gil_bench.py  resample_stream.py  test_random.py  test_resample.py  vr.py
