[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "Cython>=3.0a7",
    "setuptools_scm[toml]>=6.2",
    # Note for packagers: this constraint is specific to wheels
    # for PyPI; it is also supported to build against 1.xx still.
    # If you do so, please ensure to include a `numpy<2.0`
    # runtime requirement for those binary packages.
    "numpy>=2.0.0rc1"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/soxr/_version.py"
