[build-system]
requires = [
    "scikit-build-core >=0.10",
    "nanobind >=2",

    "setuptools >=45",
    "setuptools_scm[toml] >=6.2",

    "typing-extensions; python_version < '3.11'",

    # No, it doesn't require NumPy on build-time.
]
build-backend = "scikit_build_core.build"

[project]
name = "soxr"
dynamic = ["version"]
description = "High quality, one-dimensional sample-rate conversion library"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "KEUM Myungchul" },
]
license = "LGPL-2.1-or-later"
keywords = [
    "audio resampling",
    "samplerate conversion",
    "SRC",
    "signal processing",
    "resampler",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",

    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Telecommunications Industry",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Multimedia :: Sound/Audio :: Conversion",
    "Topic :: Scientific/Engineering",

    "Programming Language :: C",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Free Threading :: 2 - Beta",
]
dependencies = ["numpy"]

[project.optional-dependencies]
docs = ["sphinx", "sphinx-book-theme", "myst-parser", "linkify-it-py"]
test = ["pytest"]

[project.urls]
Homepage = "https://github.com/dofuuz/python-soxr"
Documentation = "https://python-soxr.readthedocs.io"
Source = "https://github.com/dofuuz/python-soxr"
"Bug Tracker" = "https://github.com/dofuuz/python-soxr/issues"

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "build-system.requires"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"

metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["src/csoxr_ver_vcs.cpp", "src/soxr/_version.py"]
sdist.exclude = [".github"]
sdist.cmake = true

[tool.cibuildwheel]
# Necessary to see build output from the actual compilation
build-verbosity = 1

# Run pytest to ensure that the package was correctly built
test-command = "pytest {project}/tests"
test-extras = ["test"]

# Needed for full C++17 support
[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "10.14"

[tool.setuptools_scm]
write_to = "src/soxr/_version.py"
