[metadata]
name = soxr
version = attr: soxr.__version__
url = https://github.com/dofuuz/python-soxr
license = LGPLv2.1+
license_files = LICENSE.txt
author = dofuuz
description = High quality, one-dimensional sample-rate conversion library
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Source = https://github.com/dofuuz/python-soxr
    Bug Tracker = https://github.com/dofuuz/python-soxr/issues/
keywords =
    audio
    samplerate conversion
    SRC
    signal processing
classifiers =
    Development Status :: 3 - Alpha

    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Telecommunications Industry
    Topic :: Multimedia :: Sound/Audio :: Analysis
    Topic :: Multimedia :: Sound/Audio :: Conversion
    Topic :: Scientific/Engineering

    License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)

    Programming Language :: C
    Programming Language :: Cython
    Programming Language :: Python :: 3

[options]
zip_safe = Flase
python_requires = >= 3.6
install_requires =
    numpy
packages =
    soxr

[build_ext]
inplace=1
