[metadata]
name = soxr
version = attr: soxr.__version__
url = https://github.com/dofuuz/python-soxr
license = LGPLv2.1+
license_files =
    LICENSE.txt
    COPYING.LGPL
author = Myungchul Keum
description = High quality, one-dimensional sample-rate conversion library
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Documentation = https://python-soxr.readthedocs.io
    Source = https://github.com/dofuuz/python-soxr
    Bug Tracker = https://github.com/dofuuz/python-soxr/issues
keywords =
    audio resampling
    samplerate conversion
    SRC
    signal processing
    resampler
classifiers =
    Development Status :: 4 - Beta

    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Telecommunications Industry
    Topic :: Multimedia :: Sound/Audio :: Analysis
    Topic :: Multimedia :: Sound/Audio :: Conversion
    Topic :: Scientific/Engineering

    License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)

    Programming Language :: C
    Programming Language :: Cython
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
python_requires = >= 3.9
install_requires =
    numpy
packages = find:
package_dir =
    =src

[options.packages.find]
where = src

[options.extras_require]
docs =
    sphinx
    sphinx-book-theme
    myst-parser
    linkify-it-py
test =
    pytest
